config-root/namespaces/jx-production/jkx-golang2/jkx-golang2-jkx-golang2-deploy.yaml
# Source: jkx-golang2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jkx-golang2-jkx-golang2
  labels:
    draft: draft-app
    chart: "jkx-golang2-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jkx-golang2'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jkx-golang2-jkx-golang2
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jkx-golang2-jkx-golang2
    spec:
      serviceAccountName: jkx-golang2-jkx-golang2
      containers:
        - name: jkx-golang2
          image: "10.105.32.3/borderx/jkx-golang2:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
